push css change

--- a/src/GamePage.css
+++ b/src/GamePage.css
@@ -21,3 +21,22 @@
 #reset {
     background: orange;
 }
+
+@media screen and (max-width: 1000px) {
+    .btnArea {
+        padding-top: 10px;
+        padding-left: 10px;
+        display: flex;
+    }
+
+    .GameBtn {
+        border: 1px solid black;
+        border-radius: 10px;
+        height: 15px;
+        line-height: 15px;
+        padding: 2px 2px 2px 2px;
+        margin-left: 5px;
+        margin-right: 5px;;
+        font-size: 10px;
+    }
+}
