--- a/src/Board.css
+++ b/src/Board.css
@@ -10,3 +10,18 @@
     padding-top: 20px;
     float: left;
 }
+
+@media screen and (max-width: 1000px) {
+    #board {
+        display: grid;
+        grid-template-columns: repeat(10, 20px);
+        grid-template-rows: repeat(10, 20px);
+    }
+
+    .board-wrapper {
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-top: 5px;
+        float: inherit;
+    }
+  }
