--- a/src/Square.css
+++ b/src/Square.css
@@ -19,3 +19,15 @@
 .redTile {
     background: tomato;
 }
+
+.blackTile {
+  background: black;
+}
+
+@media screen and (max-width: 1000px) {
+  #square {
+    height: 20px;
+    width: 20px;
+    border: 1px solid darkgray;
+  }
+}
